store @ toes added

--- a/index.html
+++ b/index.html
@@ -163,12 +163,24 @@
 						ShopJinn <br/>
 					</p>
 					<p>Online Learning Management System on Moodle <br/> 
-                     <more> Detail: The platform is centred on an online lms, which provides automatic assessment of student assignments and removes the overhead of evaluating them manually. Features such as automatic grading, evaluation notifications and test case generation library are provided.
+                     <more>  The platform is centred on an online lms, which provides automatic assessment of student assignments and removes the overhead of evaluating them manually. Features such as automatic grading, evaluation notifications and test case generation library are provided.
 </more></p>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>JAN 2016 - FEB 2016</sm></p>
 				</div>
+				<div class="col-lg-6 col-lg-offset-3">
+					<p><t>Summer Internship Project</t><br/>
+						Store at Toes &nbsp; &nbsp; <a href="http://storeattoes.com/"><span class="glyphicon glyphicon-link"></span></a>
+						<br/>
+					</p>
+					<p>Php based shopping stores information giving site <br/> 
+                     <more> The motive of this website is to help shopaholics and the public visiting NCR, to easily find best place to hangout and hav fun with their families or friends. This website has higly specified listing of all malls in NCR. 
+</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>JUNE 2016 - JULY 2016</sm></p>
+				</div>				
 		</div><!--/.row -->
 		<br>
 		<hr>
@@ -410,7 +422,7 @@
 	
 	<div id="c">
 		<div class="container">
-			<p>Last Edited on <a href="#">1/6/2016</a></p>
+			<p>Last Edited on <a href="#">25/7/2016</a></p>
 		</div>
 	</div>
 	
