--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                   <span class="glyphicon glyphicon-hourglass"></span> Coming Soon... 
                 </a>
 
-<!--				<div class="col-lg-6">
+				<div class="col-lg-6">
 					<p><img class="img-responsive" src="assets/img/port01.jpg" alt=""></p>
 				</div>
 				<div class="col-lg-3">
@@ -382,7 +382,7 @@
 						<sm><i class="icon-tag"></i> web design</sm></more> 
 					</p>
 				</div>
-		-->
+		
 		</div><!--/.row -->
 		<br>
 		<br>
