--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class="row centered">
 				<div class="col-lg-12">
 					<h1>Medha Gautam</h1>
-					<h3>Web Developer | Designer</h3>
+					<h3>Web Developer | Freelance Writer</h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -115,7 +115,7 @@
 					<h5>ABOUT</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>I'm web designer & back-end developer graduating next year. I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet featured interfaces. I also have skills in other fields like logo design , poster design or web development.</p>
+					<p>I'm web designer & back-end developer graduating this summer.I'm interested in all kinds of visual communication, but my major focus is on designing web, mobile & tablet featured interfaces. I also have skills in other fields like logo design , poster design or content writing.</p>
 				</div>
 				<div class="col-lg-3">
 					<p><a href="#"><i class="icon-file"></i></a> <sm>DOWNLOAD PDF</sm></p>
@@ -140,7 +140,7 @@
 					  <br/>
 						ABES Engineering College (UPTU) <br/>
 						<i>4 Years Course <br/>
-                        Percentile : 78%<br/>
+                        Percentile : 77%<br/>
 					Ghaziabad, UP 201009 </i>
 					</p>
 				</div>
@@ -179,7 +179,7 @@
 	</div><!--/.container -->
 	
 	
-	<!--WORK DESCRIPTION -->
+	<!-- PERSONAL WORK DESCRIPTION -->
 	<div class="container desc">
 		<div class="row">
 
@@ -187,7 +187,7 @@
 					<h5>WORK</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>Site Developer</t><br/>
+					<p><t>B.Tech Mini Project</t><br/>
 						Know How  &nbsp; &nbsp; <a href="https://github.com/zero-1-0/Know_How"><span class="glyphicon glyphicon-link"></span></a>
 <br/></p>
 <p>                        Online Mock Test Conducting Site <br/>
@@ -197,7 +197,29 @@
 				<div class="col-lg-3">
 					<p><sm>SEPT 2015 - NOV 2015</sm></p>
 				</div>
-	
+				<div class="col-lg-6">
+					<p><t>B.Tech Major Project</t><br/>
+						Snake Mate
+<br/></p>
+<p>                        Game build using Unity 3D game engine.<br/>
+		<more>The objective of this project was to make a brain game which is a mixture of two classical games i.e. Snake and Chess. It’s scripted in C#. {Team Size: 2}</more>
+</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>SEPT 2016 - APRIL 2017</sm></p>
+				</div>
+		</div><!--/.row -->
+		<br>
+		<hr>
+	</div><!--/.container -->
+
+	<!--WORK DESCRIPTION -->
+	<div class="container desc">
+		<div class="row">
+
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>WORK EXPERIENCE</h5>
+				</div>	
 				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Web Developer- Intern</t><br/>
 						ShopJinn <br/>
