--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	</div><!--/.container -->
 	
 	
-	<!-- PERSONAL WORK DESCRIPTION -->
+<!--WORK DESCRIPTION -->
 	<div class="container desc">
 		<div class="row">
 
@@ -187,7 +187,7 @@
 					<h5>WORK</h5>
 				</div>
 				<div class="col-lg-6">
-					<p><t>B.Tech Mini Project</t><br/>
+					<p><t>B.Tech Minor  Project</t><br/>
 						Know How  &nbsp; &nbsp; <a href="https://github.com/zero-1-0/Know_How"><span class="glyphicon glyphicon-link"></span></a>
 <br/></p>
 <p>                        Online Mock Test Conducting Site <br/>
@@ -197,30 +197,20 @@
 				<div class="col-lg-3">
 					<p><sm>SEPT 2015 - NOV 2015</sm></p>
 				</div>
-				<div class="col-lg-6">
+	
+				<div class="col-lg-6 col-lg-offset-3">
 					<p><t>B.Tech Major Project</t><br/>
-						Snake Mate
-<br/></p>
-<p>                        Game build using Unity 3D game engine.<br/>
-		<more>The objective of this project was to make a brain game which is a mixture of two classical games i.e. Snake and Chess. It’s scripted in C#. {Team Size: 2}</more>
-</p>
+						Snake Mate <br/>
+					</p>
+					<p>Game developed on Unity 3D game engine <br/> 
+                     <more>  Game developed as a final year project which is a mixture of two classical games i.e. Snake and Chess. It’s scripted in C#.
+</more></p>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>SEPT 2016 - APRIL 2017</sm></p>
 				</div>
-		</div><!--/.row -->
-		<br>
-		<hr>
-	</div><!--/.container -->
 
-	<!--WORK DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>WORK EXPERIENCE</h5>
-				</div>	
-				<div class="col-lg-6 col-lg-offset-3">
+			<div class="col-lg-6 col-lg-offset-3">
 					<p><t>Web Developer- Intern</t><br/>
 						ShopJinn <br/>
 					</p>
@@ -582,7 +572,7 @@
 						<a href="https://github.com/medhagtm"><i class="icon-github"></i></a>
 						<a href="https://www.facebook.com/medha.gautam.7"><i class="icon-facebook"></i></a>
 						<a href="https://in.linkedin.com/in/medha-gautam-78a793a1"><i class="icon-linkedin"></i></a>
-
+					        <a href="https://medhagtm.wordpress.com"><span class="glyphicon glyphicon-link"></span></a>
 					</p>
 				</div>
 			</div><!--/.row -->
@@ -591,7 +581,7 @@
 	
 	<div id="c">
 		<div class="container">
-			<p>Last Edited on <a href="#">25/7/2016</a></p>
+			<p>Last Edited on <a href="#">30/3/2017</a></p>
 		</div>
 	</div>
 	
